# RadFiled3D

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: package-test-publish.yml  python-functional-test.yml  python-package-test.yml
docs/uml/: ClassStructure.uxf
examples/cxx/: example01.cpp
examples/python/: example01.py  example02.py  example03.py
include/RadFiled3D/: GridTracer.hpp  PolarSegments.hpp  RadiationField.hpp  Voxel.hpp  VoxelBuffer.hpp  VoxelGrid.hpp
include/RadFiled3D/dataset/: helpers.hpp
include/RadFiled3D/helpers/: FileLock.hpp  Typing.hpp  span.hpp
include/RadFiled3D/storage/: FieldAccessor.hpp  FieldSerializer.hpp  MetadataAccessor.hpp  MetadataSerializer.hpp  RadiationFieldStore.hpp  Types.hpp
modules/: fb63SetupTools-2.0.7-py3-none-any.whl
pyCMakeSetupTool/: __init__.py  cmake.py
python/RadFiled3D/: helpers.py
python/RadFiled3D/pytorch/: radiationfieldloader.py  types.py
python/RadFiled3D/pytorch/datasets/: base.py  radfield3d.py
python/bindings/: bindings.cpp
python/stubs/: RadFiled3D.pyi
src/: FieldAccessor.cpp  FieldSerializer.cpp  FileLock.cpp  GridTracer.cpp  MetadataAccessor.cpp  MetadataSerializer.cpp  PolarSegments.cpp  RadiationField.cpp  RadiationFieldStore.cpp  StorageTypes.cpp  Typing.cpp  Voxel.cpp  VoxelBuffer.cpp  VoxelGrid.cpp  dataset_helpers.cpp
tests/: accessor_test.cpp  basic.cpp  memory_test.cpp  test_dataloading.py  test_dtypes.py  test_field_accessor.py  test_tracing.py  tracing_test.cpp
